...
    let emojis = ["👨", "👩‍🍳", "👧", "👦", "👵", "👴", "🦁", "🐼", "🦊", "🐱", "🐶", "🦖"]
    
    var body: some View {
        NavigationStack {
            Form {
                Section("基本信息") {
                    TextField("名字（例如：爸爸、宝贝）", text: $name)
                        .autocorrectionDisabled()
                    
                    Toggle("是掌勺人（可以查看买菜汇总）", isOn: $isCook)
                        .tint(Color(hex: "#FF5E36"))
                }
                
...
